--- a/public/config/config.json
+++ b/public/config/config.json
@@ -3,7 +3,7 @@
   "SCAN_LINK": "https://polygonscan.com/token/0x827acb09a2dc20e39c9aad7f7190d9bc53534192",
   "NETWORK": {
     "NAME": "Polygon",
-    "SYMBOL": "Matic",
+    "SYMBOL": "Celo",
     "ID": 137
   },
   "NFT_NAME": "Celo Erectus",
