--- a/public/config/config.json
+++ b/public/config/config.json
@@ -1,6 +1,6 @@
 {
   "CONTRACT_ADDRESS": "",
-  "SCAN_LINK": "https://polygonscan.com/token/0x827acb09a2dc20e39c9aad7f7190d9bc53534192",
+  "SCAN_LINK": "https://polygonscan.com/token/",
   "NETWORK": {
     "NAME": "Polygon",
     "SYMBOL": "Celo",
@@ -13,6 +13,6 @@
   "DISPLAY_COST": 4,
   "GAS_LIMIT": 285000,
   "MARKETPLACE": "Opeansea",
-  "MARKETPLACE_LINK": "https://opensea.io/collection/nerdy-coder-clones",
+  "MARKETPLACE_LINK": "https://opensea.io/collection/",
   "SHOW_BACKGROUND": true
 }
