--- a/public/config/config.json
+++ b/public/config/config.json
@@ -2,7 +2,7 @@
   "CONTRACT_ADDRESS": "",
   "SCAN_LINK": "https://polygonscan.com/token/",
   "NETWORK": {
-    "NAME": "Polygon",
+    "NAME": "Celo",
     "SYMBOL": "Celo",
     "ID": 137
   },
