--- a/public/config/config.json
+++ b/public/config/config.json
@@ -9,10 +9,10 @@
   "NFT_NAME": "Celo Erectus",
   "SYMBOL": "Erectus",
   "MAX_SUPPLY": 1111,
-  "WEI_COST": 100000000000000000,
-  "DISPLAY_COST": 0.10,
+  "WEI_COST": 6000000000000000000,
+  "DISPLAY_COST": 6.00,
   "GAS_LIMIT": 285000,
-  "MARKETPLACE": "Tofunft",
-  "MARKETPLACE_LINK": "https://tofunft.com/",
+  "MARKETPLACE": "",
+  "MARKETPLACE_LINK": "",
   "SHOW_BACKGROUND": true
 }
