--- a/public/config/config.json
+++ b/public/config/config.json
@@ -1,16 +1,16 @@
 {
-  "CONTRACT_ADDRESS": "0x78A1011F521803084E057a37536146734d256e7D",
-  "SCAN_LINK": "https://alfajores-blockscout.celo-testnet.org/address/0x78A1011F521803084E057a37536146734d256e7D",
+  "CONTRACT_ADDRESS": "0x56546DAF99C69c0F6271FA287b30A1946cA466f0",
+  "SCAN_LINK": "https://explorer.celo.org/address/0x56546DAF99C69c0F6271FA287b30A1946cA466f0",
   "NETWORK": {
     "NAME": "Celo",
     "SYMBOL": "CELO",
-    "ID": 44787
+    "ID": 42220
   },
   "NFT_NAME": "Celo Erectus",
   "SYMBOL": "Erectus",
   "MAX_SUPPLY": 1111,
-  "WEI_COST": 100000000000000000,
-  "DISPLAY_COST": 0.10,
+  "WEI_COST": 6000000000000000000,
+  "DISPLAY_COST": 6.00,
   "GAS_LIMIT": 285000,
   "MARKETPLACE": "",
   "MARKETPLACE_LINK": "",
