--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "start minting NFTs",
   "private": true,
   "dependencies": {
+    "@alch/alchemy-web3": "^1.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
